--- a/templates/vanilla-js/index.html
+++ b/templates/vanilla-js/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/sketch.js"></script>
 </body>
 
 </html>
