--- a/templates/vanilla-ts/index.html
+++ b/templates/vanilla-ts/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/sketch.ts"></script>
 </body>
 
 </html>
